# encoder-to-odom-library

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/: pull_request_template.md
docs/: Doxyfile  warnings.txt
docs/html/: annotated.html  classOdometryProcessor-members.html  classOdometryProcessor.html  classOdometryProcessor__coll__graph.map  classOdometryProcessor__coll__graph.md5  classOdometryProcessor__inherit__graph.map  classOdometryProcessor__inherit__graph.md5  classTester-members.html  classTester.html  classTester__coll__graph.map  classTester__coll__graph.md5  classTester__inherit__graph.map  classTester__inherit__graph.md5  classes.html  dir_000002_000000.html  dir_000003_000000.html  dir_45e9dfca3d7a98e113853fdbaa96f940.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  (+19 more)
docs/latex/: annotated.tex  classOdometryProcessor.tex  classOdometryProcessor__coll__graph.md5  classOdometryProcessor__inherit__graph.md5  classTester.tex  classTester__coll__graph.md5  files.tex  index.tex  (+11 more)
include/: odometry.h
src/: odometry.cpp
tests/: CMakeLists.txt  encoder_test.cpp
(+45 files in other folders)
